{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "f58ef389-a9fb-44d2-b0eb-228653d6e936",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "cce696ec-9f37-4c3a-84a5-a89d60cd9a93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "10b55ca7-da42-4258-a60c-b356742fba0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "e2692130-3857-4f20-a074-93ec2dce1f72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "a8cc854d-e33f-4edc-8b72-1c8d75ebba87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "e02f0eb4-ae9c-441f-ab83-1dac797ae163",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestClick",
                    "type": "Button",
                    "id": "e3d3783c-0ea6-4468-892a-4dc8fc0c1bef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fafcc4d7-e530-4e97-860a-f17256e26b64",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e9f1296-a890-4700-bef9-9c9f844db492",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b31e687-b640-46c8-b40c-73b51bdd4df6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49d3caa9-249d-41f8-a79c-773f6775a69e",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e08ea293-bd11-4e95-b0bd-1a9610111e3a",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b578fc59-838d-4135-a68e-4ff99f6ab582",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "TestClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "e9b9d82e-f221-4f6a-bbc9-578d43789a40",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6b7343a1-5fc8-4af9-b5a0-d25744026a29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7149502b-95be-4860-93fc-a6045459b2cd",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c2adad5b-c262-47a5-ace2-c78b198cb0f2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0ba7bd64-b17b-4a70-ae27-442c4903c82f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ab824426-a1f0-42a8-941f-34edf0bd6885",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "37f67a3d-d1f6-433a-866a-fc8e39470522",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}